// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllColors 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-react-useId-mock"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-react-useId-mock"
          >
            danger
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-danger"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-react-useId-mock"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-react-useId-mock"
          >
            default
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-default-400"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-react-useId-mock"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-react-useId-mock"
          >
            info
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-react-useId-mock"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-react-useId-mock"
          >
            primary
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-react-useId-mock"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-react-useId-mock"
          >
            secondary
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-secondary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-react-useId-mock"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-react-useId-mock"
          >
            success
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-success"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-react-useId-mock"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-react-useId-mock"
          >
            warning
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-warning"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AllSizes 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-react-useId-mock"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-small"
            id="react-aria-react-useId-mock"
          >
            sm
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-1 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-react-useId-mock"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-react-useId-mock"
          >
            md
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-react-useId-mock"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-large"
            id="react-aria-react-useId-mock"
          >
            lg
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-5 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-react-useId-mock"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-info"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Finished 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="100%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-react-useId-mock"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-success"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Indeterminate 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      class="flex flex-col gap-2 w-full"
      data-indeterminate="true"
      id="react-aria-react-useId-mock"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full absolute w-full origin-left animate-indeterminate-bar transition-transform !duration-500 bg-info"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > ShowValueLabel 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-react-useId-mock"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
        >
          42%
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-info"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > SomePercentages 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        aria-valuetext="10%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        aria-valuetext="30%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        aria-valuetext="40%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        aria-valuetext="50%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="60"
        aria-valuetext="60%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="70"
        aria-valuetext="70%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="80"
        aria-valuetext="80%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="90"
        aria-valuetext="90%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        aria-valuetext="100%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-success"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        aria-valuetext="150%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-react-useId-mock"
        role="progressbar"
      >
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-success"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithLabel 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-labelledby="react-aria-react-useId-mock"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-react-useId-mock"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
          id="react-aria-react-useId-mock"
        >
          Some Label
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-info"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithLabelAndValueLabel 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-labelledby="react-aria-react-useId-mock"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-react-useId-mock"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
          id="react-aria-react-useId-mock"
        >
          Some Label
        </span>
        <span
          class="text-medium"
        >
          42%
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-info"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithoutPercentProp 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="0%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-react-useId-mock"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-info"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;
